Added one more site

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             <td>0</td>
             <td>0</td>
         </tr>
+        <tr>
+            <td>https://www.sobyanin.ru/</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
         </tbody>
     </table>
 </div>
@@ -104,6 +109,7 @@
         'https://belmarket.by/': {number_of_requests: 0, number_of_errored_responses: 0},
         'https://yandex.by/': {number_of_requests: 0, number_of_errored_responses: 0},
         'https://president.gov.by/ru': {number_of_requests: 0, number_of_errored_responses: 0},
+        'https://www.sobyanin.ru/': {number_of_requests: 0, number_of_errored_responses: 0},
     }
 
     var statsEl = document.getElementById('stats');
